# eKoNLPy

./: .copier-config.poetry.yaml  .copier-config.yaml  .copierignore  .coveragerc  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tasks-extra.toml  .tasks.toml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yaml  codecov.yml  description.py  index.html  mkdocs.yaml  objects.inv  pyproject.poetry.toml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: dependabot.yaml  release.yaml
.github/workflows/: deploy-docs.yaml  lint_and_test.yaml  prerelease-to-test-pypi.yaml  prerelease.yaml  release-patch.yaml  release-test.yaml  release.yaml
docs/: index.md  requirements.txt
ekonlpy/: __init__.py  dictionary.py  utils.py
ekonlpy/data/: __init__.py  tagset.py
ekonlpy/data/dictionary/: ACTION_PHRASES.txt  ADJECTIVES.txt  ADVERBES.txt  ADVERBS.txt  COUNTRY.txt  COUNTRY_LIST.txt  CURRENCY.txt  CUST_ADJS.txt  CUST_ADVS.txt  CUST_NAMES.txt  CUST_TERMS.txt  ECON_PHRASES.txt  ECON_TERMS.txt  ENTITIES.txt  ENTITY.txt  ENTITY_LIST.txt  FINIST_LIST.txt  FOREIGN_TERMS.txt  GENERIC.txt  INDUSTRY_TERMS.txt  INSTITUTION.txt  INSTITUTIONS.txt  LEMMA.txt  NAMES.txt  NAME_PHRASES.txt  NOUNS.txt  PHRASES.txt  POLARITY_PHRASES.txt  PROPER_NOUNS.txt  SECTOR.txt  STOPWORDS.txt  STOPWORDS_CUST.txt  SYNONYM.txt  SYNONYMS.txt  SYNONYM_MAG.txt  SYNONYM_PHRASES.txt  SYNONYM_TERMS.txt  SYNONYM_VA.txt  UNIT.txt  VERBS.txt
ekonlpy/data/lexicon/: Generic.txt  MPKO.csv  MPS_polarities_GB3Y2_5gram.csv  MPS_polarities_GB3Y_5gram.csv  MPS_polarities_bi_pt_w5.csv  MPS_polarities_call2_5gram.csv  MPS_polarities_call_5gram.csv  MPS_stopwords.txt  MPS_vocab_5gram.txt  Names.txt  mp_polarities_call_5gram.csv  mp_polarities_call_7gram.csv  mp_polarities_w2c3_w5.csv  mp_polarities_w2c4_w5.csv  mp_polarities_w2c5_w5.csv  mp_polarity_target.txt  mp_sent_startwords.txt  mp_sent_stopngrams.txt  mp_sent_stopwords.txt  mp_sent_vocab_5gram.txt  mp_sent_vocab_7gram.txt
ekonlpy/data/lexicon/euko/: mp_uncertainty_lexicon_lex.csv
ekonlpy/data/lexicon/mpko/: mp_polarity_auxwords.txt  mp_polarity_lexicon_call.csv  mp_polarity_lexicon_call_ph.csv  mp_polarity_lexicon_la.csv  mp_polarity_lexicon_lex.csv  mp_polarity_lexicon_ma.csv  mp_polarity_lexicon_mkt_n7.csv  mp_polarity_lexicon_w2c5_w3.csv  mp_polarity_map.txt  mp_polarity_stopwords.txt  mp_polarity_words.txt  mp_polarity_wordset.txt  mp_sent_stop5grams.txt  mp_uncertainty_lexicon.csv
ekonlpy/data/model/: MPKC.nbc  mp_topic_model-k36.lda.expElogbeta.npy  mp_topic_model-k36.lda.state  mp_topic_titles-k36.txt
ekonlpy/etag/: __init__.py  _template.py
ekonlpy/sentiment/: __init__.py  base.py  euko.py  hiv4.py  kosac.py  lm.py  mpck.py  mpko.py  utils.py
ekonlpy/tag/: __init__.py  _mecab.py  _postprocess.py
ekonlpy/topic/: __init__.py  mptk.py
search/: search_index.json
src/ekonlpy/: __cli__.py  __init__.py  _version.py
src/ekonlpy/base/: __init__.py  base.py
src/ekonlpy/data/: tagset.py
src/ekonlpy/data/dictionary/: ECON_PHRASES.txt  ECON_TERMS.txt  ENTITY.txt  NAMES.txt  NOUNS.txt  PROPER_NOUNS.txt  STOPWORDS_EN.txt  SYNONYM.txt  SYNONYM_PHRASES.txt  UNIT.txt
src/ekonlpy/data/lexicon/: Currencies.txt
src/ekonlpy/data/lexicon/euko/: mp_uncertainty_lexicon_mkt.csv
src/ekonlpy/data/lexicon/mpko/: mp_polarity_lexicon_lex.csv  mp_polarity_lexicon_mkt.csv  mp_polarity_lexicon_mkt_n3.csv  mp_polarity_vocab.txt
src/ekonlpy/data/model/: mp_corpus.dict  mp_topic_model-k36.lda  mp_topic_titles-k36.txt
src/ekonlpy/etag/: __init__.py  _template.py
src/ekonlpy/mecab/: __init__.py  _mecab.py  _userdic.py
src/ekonlpy/sentiment/: __init__.py  base.py  euko.py  hiv4.py  kosac.py  lm.py  mpck.py  mpko.py  utils.py
src/ekonlpy/tag/: __init__.py  _mecab.py  _postprocess.py  _userdic.py  mecab.py
src/ekonlpy/utils/: dictionary.py  io.py
tests/ekonlpy/: demo_breakdown_api.py  test_cli.py  test_fugashi.py  test_init.py  test_sentiment.py  test_tagger.py
